next:
 20100209
    - (Jerome) Heavy refactoring, faster drawing, better handling of
      scrollbars, better handling of variable-sized calendars

 20100207
    - (Jerome) New event for right click

 20100203
    - (Jerome) Highlight current day

  20100201
    - (Jerome)  Start moving  all actual  drawing code  to  a separate
      class (wxDrawer).  This will allow  theming. In addition  to the
      base drawer, add a  drawer based on wx.GraphicsContext with some
      eye-candy like rounded rectangles and gradients.

  20100131
    - (Jerome) Add horizontal view style
    - (Jerome) Work around a wxWidgets bug (SetToWeekDayInSameWeek)
    - (Jerome) Fix a bug (on Jan 31st 2010, trying to jump to the next
      month would lead to March instead of February)
    - (Jerome) Add a new schedule attribute: foreground color

  20100130
    - (Jerome) Add some new events in the demo.
    - (Jerome) Some fixes and minor refactoring

v1.2.4:
  20100129
    - (Jerome) Some fixes in wxSchedulerCore and wxSchedulerPaint
    - (Jerome) Add support icons in the schedule

v1.2.3:
  20070824
    - (Daniele) Add methods Next() and Previous() for easly navigation in one (default)
      or multiple steps

v1.2.2:
  20070419
    - (Daniele) New unified changelog in international language
    - (Daniele) Some fixes to make code work fine under both wxPython 2.8 and 2.6