@@ -62,18 +62,14 @@ class wxSchedulerPaint( object ):
 	
 	def __init__( self, *args, **kwds ):
 		super( wxSchedulerPaint, self ).__init__( *args, **kwds )
-		
-		# If possible, enable autobuffered dc
-		self._autoBufferedDC = hasattr( self, 'SetBackgroundStyle' )
-
-		if self._autoBufferedDC:
-			self.SetBackgroundStyle( wx.BG_STYLE_CUSTOM )
 
 		self._resizable		= False
 		self._style = wxSCHEDULER_VERTICAL
 
 		self._drawerClass = wxBaseDrawer
 		#self._drawerClass = wxFancyDrawer
+
+		self._bitmap = None
 
 		if isinstance(self, wx.ScrolledWindow):
 			self.SetSizer(wxSchedulerSizer(self.CalcMinSize))
@@ -483,67 +479,43 @@ class wxSchedulerPaint( object ):
 	def OnPaint( self, evt = None ):
 		# Do the draw
 
-		if isinstance(self, wx.ScrolledWindow):
-			size = self.GetVirtualSize()
-		else:
-			size = self.GetSize()
-
-		bitmap = None
-
-		if self._dc is None:
-			if self._drawerClass.use_gc or not self._autoBufferedDC:
-				# Trying  to  double-buffer  ourselves
-				# here.  Unfortunately,  this does not
-				# work on Windows when using a GC...
-
-				if self._drawerClass.use_gc and '__WXMSW__' in wx.PlatformInfo:
-					dc = wx.PaintDC(self)
-					self.PrepareDC(dc)
-				else:
-					bitmap = wx.EmptyBitmap(size.GetWidth(), size.GetHeight())
+		if self._bitmap is None:
+			if isinstance(self, wx.ScrolledWindow):
+				size = self.GetVirtualSize()
 			else:
-				dc = wx.AutoBufferedPaintDC(self)
-				self.PrepareDC( dc )
+				size = self.GetSize()
+
+			self._bitmap = wx.EmptyBitmap(size.GetWidth(), size.GetHeight())
+			memDC = wx.MemoryDC()
+			memDC.SelectObject(self._bitmap)
+			try:
+				memDC.BeginDrawing()
+				try:
+					memDC.SetBackground( wx.Brush( SCHEDULER_BACKGROUND_BRUSH ) )
+					memDC.SetPen( FOREGROUND_PEN )
+					memDC.Clear()
+					memDC.SetFont(wx.NORMAL_FONT)
+
+					if self._drawerClass.use_gc:
+						context = wx.GraphicsContext.Create(memDC)
+					else:
+						context = memDC
+
+					self.DoPaint(self._drawerClass(context, self._lstDisplayedHours), 0, 0, size.GetWidth(), size.GetHeight())
+				finally:
+					memDC.EndDrawing()
+			finally:
+				memDC.SelectObject(wx.NullBitmap)
+
+		if self._dc:
+			dc = self._dc
 		else:
-			# We  can't assume that  the underlying  DC is
-			# supported by  GraphicsContext, so draw first
-			# into a bitmap
+			dc = wx.PaintDC(self)
 
-			bitmap = wx.EmptyBitmap(size.GetWidth(), size.GetHeight())
-
-		if bitmap is not None:
-			dc = wx.MemoryDC()
-			dc.SelectObject(bitmap)
-
+		self.PrepareDC(dc)
 		dc.BeginDrawing()
-
 		try:
-			dc.SetBackground( wx.Brush( SCHEDULER_BACKGROUND_BRUSH ) )
-			dc.SetPen( FOREGROUND_PEN )
-			dc.Clear()
-			dc.SetFont(wx.NORMAL_FONT)
-
-			if self._drawerClass.use_gc:
-				context = wx.GraphicsContext.Create(dc)
-			else:
-				context = dc
-
-			self.DoPaint(self._drawerClass(context, self._lstDisplayedHours), 0, 0, size.GetWidth(), size.GetHeight())
-
-			if bitmap is not None:
-				dc.SelectObject(wx.NullBitmap)
-
-				if self._dc is None:
-					dc = wx.PaintDC(self)
-					self.PrepareDC(dc)
-
-					dc.BeginDrawing()
-					try:
-						dc.DrawBitmap(bitmap, 0, 0, True)
-					finally:
-						dc.EndDrawing()
-				else:
-					self._dc.DrawBitmap(bitmap, 0, 0, True)
+			dc.DrawBitmap(self._bitmap, 0, 0, False)
 		finally:
 			dc.EndDrawing()
 
